Update Spam Detection - NLP (Natural Language Processing).ipynb

--- a/Spam Detection - NLP (Natural Language Processing).ipynb
+++ b/Spam Detection - NLP (Natural Language Processing).ipynb
@@ -8,7 +8,7 @@
     "# Spam Detection - NLP (Natural Language Processing)\n",
     "\n",
     "\n",
-    "This is a Natural Language Processing(NLP) project that I did part of training. This trains on text data to be able to dechiper if a text message is spam or not. The Data is gathered voluntary acquired text messages in the UK, there are over 5 thousand messages that I will use for training and testing.\n",
+    "This is a Natural Language Processing(NLP) project that I did part of training. This trains on text data to be able to decipher if a text message is spam or not. The Data is gathered voluntarily acquired text messages in the UK, there are over 5 thousand messages that I will use for training and testing.\n",
     "\n",
     "\n",
     "Data Citation:\n",
